--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -193,7 +193,7 @@ To investigate whether the amount of sleep a college student gets during weekday
 
 The Conditions for Two-Way Table Test of Independence include **Independence**, in which the data values were collected were from a random sample, and **Large Sample**, in which $e_{i,j} \geq 5$ for each cell.
 
-For the **Independence** condition, the use of convenience sampling method may introduce certain dependence among observations by overrepresenting students from certain social circles or colleges, potentially skewing the results. For example, students from the same social circles or colleges may share common traits, behaviors, or habits. Thus, Independence condition for Two-Way Table Test of Independence is not met.
+For the **Independence** condition, the use of convenience sampling method may introduce certain dependence among observations by overrepresenting students from certain social circles or colleges with similar traits, behaviors, or habits, potentially skewing the results. Thus, Independence condition for Two-Way Table Test of Independence is not met.
 
 If college students' weekday sleep duration and productivity level are truly independent under the null hypothesis $H_0$ of independence, our expected count values for all cells would be as following.
 
@@ -211,7 +211,7 @@ kable(round(expected_counts, 2))
 
 For the **Large Sample** condition, there are 2 expected counts that do not meet the criteria of $e_{i,j} \geq 5$ - $e_{2,1}$ and $e_{3,1}$ - as shown in @tbl-sleep-productivity-expected. Thus, Large Sample condition for Two-Way Table Test of Independence is not met.
 
-**Note**: Because of both conditions not met, the test statistics $\chi^2$ may neither have a Chi-square Distribution nor be accurate, meaning that our calculated p-value may not be accurate. If it is smaller than it should be, we may be more likely to reject the null hypothesis when it is true, which is a Type 1 error. If it is bigger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is true, which is a Type 2 error. However, we will still run the Two-Way Table Inference of Independence.
+**Note**: Because of both conditions not met, the test statistics $\chi^2$ may not have a Chi-square Distribution. However, we will still run the Two-Way Table Inference of Independence.
 
 #### Chi-Square Testing
 
@@ -274,7 +274,7 @@ The statistical analysis above set out to test the relationship between weekday 
 
 Data was self-reported and was collected from college students using convenience sampling with a Google Form. We reached out to our peers who are also in college, and received responses from Smithies, as well as many individuals who attend colleges other than Smith. To assure consistency and ease of data analysis, the questions on the Google Form were answerable only by multiple choice options. There were three options for average amount of sleep on weekdays, dividing observations into: less than 5 hours, 5-7 hours, and more than 7 hours. This converted the data for hours, which are typically continuous numerical values, into a categorical variable. Survey participants indicated their self-evaluated productivity as “not productive”, “somewhat productive”, or “very productive”. This resulted in a categorical and ordinal variable for the data regarding productivity. @fig-sleep and @fig-productivity show the proportions of survey respondents that indicated themselves as falling within our three divisions of hours of sleep and productivity, respectively. @tbl-sleep-productivity and @fig-sleep-productivity summarize the distribution of both of our variables, displaying the counts of observations grouped by both hours of sleep and productivity. We determined that the appropriate statistical analysis to use in this context given that both of our variables are categorical is the Two-Way Table Test of Independence using a mathematical model. 
 
-A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition cannot be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. 
+A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition cannot be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If it is smaller than it should be, we may be more likely to reject the null hypothesis when it is true, which is a Type 1 error. If it is bigger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is true, which is a Type 2 error.
 
 We conducted our analysis under the assumption that the conditions described above were met. The analysis concluded that the self-reported productivity level of college students varies based on the average amount of sleep they get during weekday.  
 
