--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -276,7 +276,7 @@ Data was self-reported and was collected from college students using convenience
 
 A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition cannot be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If it is smaller than it should be, we may be more likely to reject the null hypothesis when it is true, which is a Type 1 error. If it is bigger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is true, which is a Type 2 error.
 
-We conducted our analysis under the assumption that the conditions described above were met. The analysis concluded that the self-reported productivity level of college students varies based on the average amount of sleep they get during weekday.  
+We conducted our analysis under the assumption that the conditions described above were met. The analysis concluded that the self-reported average productivity level of college students varies based on the average amount of sleep they get during weekday.  
 
 Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @preetha2020knowledge is an analysis of levels of awareness among dental students that getting insufficient sleep is detrimental to productivity. Similarly to our study, the data were collected by distributing online surveys. The study found that 74% of surveyed individuals are aware that inadequate sleep causes stress, and the same percentage responded that they were aware that insufficient sleep causes degeneration of cognitive functions. 77% of participants claimed to be aware that insufficient sleep can trigger irritability. The study’s results include further analyses of dental student’s knowledge of the negative effects of sleep deprivation, the ones most pertinent to the research we conducted are included here. Based on these results and parameters of @preetha2020knowledge, it seems probable that our result reflects a real correlation between shorter sleep duration and lower overall productivity level in college students. 
 
